--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,4 +1,49 @@
+.no-webp .inicio{
+    background-image: url(../img/header.jpg);
+}
+
+.webp .inicio{
+    background-image: url(../img/header.jpg);
+}
+
+
 .header{
     background-color: $grisOscuro;
     padding: 1rem 0 3rem 0;
+
+    &.inicio {
+        //Posiciona horizontal y vertical
+        background-position: center center;
+        //Cubre todo el espacio con el bg
+        background-size: cover;
+
+        @include tablet{
+            min-height: 70rem;
+        }
+
+        .contenido-header{
+        //Colocar el elemento debajo (jerarquizando la altura)
+            @include tablet{
+                min-height: 70rem;
+            }
+        }
+    }
 }
+
+.contenido-header{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+
+
+    h1{
+        text-align: left;
+        color: $blanco;
+        font-weight: bold;
+        line-height: 2;
+        //Limitar el texto que puede aparecer 
+        max-width: 60rem;
+    }
+}
+
