--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,9 +3,18 @@
 @import 'base/mixins';
 @import 'base/globales';
 @import 'base/utilidades';
+@import 'base/botones';
 
 /** UI **/
 @import 'layout/footer';
 @import 'layout/header';
 @import 'layout/navegacion';
 @import 'layout/iconos';
+@import 'layout/anuncios';
+@import 'layout/contactar';
+@import 'layout/inferior';
+@import 'layout/testimoniales';
+
+
+/** Páginas internas **/
+@import 'internas/nosotros';
