--- a/src/scss/layout/_anuncios.scss
+++ b/src/scss/layout/_anuncios.scss
@@ -7,7 +7,7 @@
 .anuncio{
     background-color: lighten( $gris, 5);
     border: 1px solid darken($gris, 10);
-    margin-top: 2rem;
+    margin-bottom: 2rem;
 
     .contenido-anuncio{
         padding:2rem;
