--- a/src/scss/layout/_navegacion.scss
+++ b/src/scss/layout/_navegacion.scss
@@ -1,20 +1,62 @@
+.derecha{
+    display: flex;
+    flex-direction: column;
+
+    @include tablet{
+        align-items: flex-end;
+    }
+
+    .dark-mode-boton{
+        width: 3rem;
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+
+        //Invertir el color de un elemento con filtro
+        filter: invert(100%);
+
+        &:hover{
+            cursor: pointer;
+        }
+
+        @include tablet{
+            margin-top: 0;
+        }
+    }
+}
+
 .barra{
     display:flex;
     flex-direction: column;
+    align-items: center;
     padding-top: 3rem;
+
     @include tablet{
         flex-direction: row;
         //Colocar la navegación del lado derecho
         justify-content: space-between;
+
+        //Alineamos al centro porque ya tiene las propiedades de flex
+        align-items: flex-end;
     }
 }
 
 .navegacion{
+    //Sólo aparece cuando no está en la resolución de tablet (o mayor)
+    visibility: hidden;
+    //Animación para mostrar en .3 segundos el menú
+    opacity: 0;
+    //No le asigna altura
+    height: 0;
+    transition: visibility .3s ease-in-out, opacity 0.5s linear, height .5s linear;
+
     @include tablet{
         //En tamaño de tablet toma todo el espacio disponible (no arriba hacia abajo)
         display: flex;
         //Alinear los elementos verticalmente
         align-items: center;
+        opacity: 1;
+        visibility: visible;
+
     }
 
     a{
@@ -34,4 +76,23 @@
             }
         }
     }
+}
+
+/** Menú hamburguesa **/
+
+.mobile-menu{
+    @include tablet{
+        display: none;
+    }
+
+    img{
+        width: 5rem;
+    }
+}
+
+.mostrar{
+    visibility: visible;
+    opacity: 1;
+    //Toma la altura que requiera (dinámico)
+    height: auto;
 }
